--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^6.2.0",
+    "ip": "^1.1.5",
     "nodemon": "^2.0.15",
     "react-refresh": "^0.11.0",
     "redux-logger": "^3.0.6",
@@ -36,10 +37,17 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.16.7",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.4.0",
+    "@mui/styles": "^5.3.0",
     "@redux-devtools/extension": "^3.1.0",
-    "@reduxjs/toolkit": "^1.7.1",
+    "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.24.0",
     "debounce": "^1.2.1",
+    "install": "^0.13.0",
+    "npm": "^8.4.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
