--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.16.7",
-    "@babel/plugin-transform-runtime": "^7.16.8",
     "@babel/preset-env": "^7.16.8",
     "@babel/preset-react": "^7.16.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
@@ -45,9 +44,9 @@
     "@redux-devtools/extension": "^3.1.0",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.24.0",
+    "cookie-parser": "^1.4.6",
     "debounce": "^1.2.1",
-    "install": "^0.13.0",
-    "npm": "^8.4.1",
+    "express": "^4.17.2",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
