--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fetch-ssr": "^3.3.0",
+    "react-hook-form": "^7.27.1",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
