--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cookie-parser": "^1.4.6",
     "debounce": "^1.2.1",
     "express": "^4.17.2",
+    "notistack": "^2.0.3",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -59,6 +60,7 @@
     "redux-thunk": "^2.4.1",
     "regenerator-runtime": "^0.13.9",
     "styled-components": "^5.3.3",
-    "styled-normalize": "^8.0.7"
+    "styled-normalize": "^8.0.7",
+    "validate": "^5.2.0"
   }
 }
