--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "@mui/material": "^5.4.0",
     "@mui/styles": "^5.3.0",
     "axios": "^0.24.0",
+    "buffer": "^6.0.3",
     "cookie-parser": "^1.4.6",
     "debounce": "^1.2.1",
     "express": "^4.17.2",
+    "markdown-it": "^12.3.2",
     "notistack": "^2.0.3",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
