--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": "./",
     "jsx": "react",
     "paths": {
-      "app/*": ["./source/app/*"],
+      "app/*": ["./source/app/*"]
     }
   },
   "exclude": ["node_modules"]
