--- a/package.json
+++ b/package.json
@@ -21,18 +21,22 @@
     "concurrently": "^7.0.0",
     "eslint": "^8.7.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^6.2.0",
     "ip": "^1.1.5",
     "nodemon": "^2.0.15",
+    "prettier": "^2.5.1",
     "react-refresh": "^0.11.0",
     "redux-logger": "^3.0.6",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3"
+    "webpack-dev-server": "^4.7.3",
+    "prop-types": "^15.8.1"
   },
   "dependencies": {
     "@babel/runtime": "^7.16.7",
@@ -48,7 +52,6 @@
     "express": "^4.17.2",
     "markdown-it": "^12.3.2",
     "notistack": "^2.0.3",
-    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.1",
