--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "server side aplication created with react",
   "main": "index.js",
   "scripts": {
+    "serverRender": "nodemon ./build/server.js --watch build/server.js",
     "watch:serverRender": "webpack --config webpack/webpack.server.config.js",
     "watch:front": "webpack-dev-server --config webpack/webpack.client.config.js",
-    "watch": "set NODE_ENV=development&& concurrently \"npm run watch:serverRender\" \"npm run watch:front\"",
-    "serverRender": "nodemon ./build/server.js --watch build/server.js",
+    "dev": "set NODE_ENV=development&& concurrently \"npm run watch:serverRender\" \"npm run watch:front\" \"npm run serverRender\"",
     "fix": "eslint --fix --ext js,jsx ."
   },
   "author": "armandojes",
