--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@babel/preset-react": "^7.16.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "babel-loader": "^8.2.3",
+    "babel-plugin-styled-components": "^2.0.6",
     "concurrently": "^7.0.0",
+    "css-loader": "^6.6.0",
     "eslint": "^8.7.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.4.0",
@@ -29,14 +31,15 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^6.2.0",
     "ip": "^1.1.5",
+    "mini-css-extract-plugin": "^2.5.3",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
+    "prop-types": "^15.8.1",
     "react-refresh": "^0.11.0",
     "redux-logger": "^3.0.6",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3",
-    "prop-types": "^15.8.1"
+    "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
     "@babel/runtime": "^7.16.7",
@@ -54,6 +57,7 @@
     "notistack": "^2.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-highlight": "^0.14.0",
     "react-hook-form": "^7.27.1",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
