--- a/package.json
+++ b/package.json
@@ -54,10 +54,10 @@
     "debounce": "^1.2.1",
     "express": "^4.17.2",
     "markdown-it": "^12.3.2",
+    "markdown-it-highlightjs": "^3.6.0",
     "notistack": "^2.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-highlight": "^0.14.0",
     "react-hook-form": "^7.27.1",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
